RESOLVED FIXED69413
REGRESSION(r96347): Build is broken with MSVC compiler if !PLATFORM(WINDOWS)
https://bugs.webkit.org/show_bug.cgi?id=69413
Summary REGRESSION(r96347): Build is broken with MSVC compiler if !PLATFORM(WINDOWS)
Csaba Osztrogonác
Reported 2011-10-05 05:06:22 PDT
http://trac.webkit.org/changeset/96347/trunk/Source/JavaScriptCore/assembler/MacroAssemblerCodeRef.h broke QtWebKit build on Windows with MSVC2008 Express with the following build error: MacroAssemblerCodeRef.h(112) : error C2059: syntax error : 'function-style cast' ...
Attachments
Patch (1.35 KB, patch)
2011-10-05 06:30 PDT, Csaba Osztrogonác
no flags
Patch (1.38 KB, patch)
2011-10-05 07:35 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2011-10-05 05:32:57 PDT
I got it, defining STDCALL is incorrenct if !PLATFORM(WINDOWS) && COMPILER(MSVC). Fix is coming soon.
Csaba Osztrogonác
Comment 2 2011-10-05 06:30:03 PDT
Csaba Osztrogonác
Comment 3 2011-10-05 06:32:17 PDT
(In reply to comment #2) > Created an attachment (id=109782) [details] > Patch The root of the problem was that PLATFORM(WINDOWS) == Apple Windows port, but if you build eg QtWebKit on Windows with MSVC, PLATFORM(WINDOWS) == false, OS(WIN) == true, COMPILER(MSVC) == true.
Gyuyoung Kim
Comment 4 2011-10-05 06:58:43 PDT
Csaba Osztrogonác
Comment 5 2011-10-05 07:01:21 PDT
Comment on attachment 109782 [details] Patch ooops
Csaba Osztrogonác
Comment 6 2011-10-05 07:35:55 PDT
WebKit Review Bot
Comment 7 2011-10-06 04:56:51 PDT
Comment on attachment 109790 [details] Patch Clearing flags on attachment: 109790 Committed r96802: <http://trac.webkit.org/changeset/96802>
WebKit Review Bot
Comment 8 2011-10-06 04:56:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.