REGRESSION(r96347): Build is broken with MSVC compiler if !PLATFORM(WINDOWS) https://bugs.webkit.org/show_bug.cgi?id=69413

Reviewed by Darin Adler.

* assembler/MacroAssemblerCodeRef.h: Define STDCALL for MSVC in a proper way.


Canonical link: https://commits.webkit.org/85560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96802 268f45cc-cd09-0410-ab3c-d52691b4dbfc